--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -11,6 +12,7 @@
           rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/media.css">
     <script src="js/main.js"></script>
     <title>Ugmonk</title>
 </head>
@@ -38,9 +40,14 @@
                         <div class="section-main-menu-navbar-search-block-after">
                             <img src="images/cart.png" alt="#" width="18" height="18">
                         </div>
+                        <div class="section-main-menu-search-obj">
+                            <input type="text">
+                        </div>
+
                     </ul>
                 </div>
             </div>
+
         </div>
     </div>
     <div class="img-for-section">
@@ -164,9 +171,9 @@
             <p class="section-cart-shop-cart-block-cart-name">Voyage</p>
             <p class="section-cart-shop-cart-block-cart-price">$36.00</p>
         </div>
-        <div class="section-cart-shop-btn">
-            Shop New Arrivals
-        </div>
+    </div>
+    <div class="section-cart-shop-btn">
+        Shop New Arrivals
     </div>
 </section>
 <section class="section-analog">
