--- a/index.html
+++ b/index.html
@@ -26,24 +26,37 @@
                 </div>
                 <div class="section-main-menu-navbar">
                     <ul>
-                        <li>Men</li>
-                        <li>Women</li>
-                        <li>Objects</li>
-                        <li>Analog</li>
+                        <a href="#">
+                            <li>Men</li>
+                        </a>
+                        <a href="#">
+                            <li>Women</li>
+                        </a>
+                        <a href="#">
+                            <li>Objects</li>
+                        </a>
+                        <a href="#">
+                            <li>Analog</li>
+                        </a>
                     </ul>
                 </div>
                 <div class="section-main-menu-navbar-search-block">
                     <ul>
-                        <li class="section-main-menu-navbar-search-block-after">Journal</li>
-                        <li>Search</li>
-                        <li class="section-main-menu-navbar-search-block-after">Login</li>
+                        <li class="section-main-menu-navbar-search-block-after">
+                            <a href="#">Journal</a>
+                        </li>
+                        <li>
+                            <a href="#">Search</a>
+                        </li>
+                        <li class="section-main-menu-navbar-search-block-after">
+                            <a href="#">Login</a>
+                        </li>
                         <div class="section-main-menu-navbar-search-block-after">
-                            <img src="images/cart.png" alt="#" width="18" height="18">
+                            <a href="#">
+                                <img src="images/cart.png" alt="#" width="18" height="18">
+                            </a>
                         </div>
-                        <div class="section-main-menu-search-obj">
-                            <input type="text">
-                        </div>
-
+                        <input type="search">
                     </ul>
                 </div>
             </div>
