--- a/index.html
+++ b/index.html
@@ -20,6 +20,51 @@
 <section class="section-main">
     <div class="inner">
         <div class="section-main-menu">
+            <div class="hamburger-menu">
+                <input id="menu__toggle" type="checkbox"/>
+                <label class="menu__btn" for="menu__toggle">
+                    <span></span>
+                </label>
+
+                <ul class="menu__box">
+                    <li>
+                        <a href="#" class="menu__item">
+                            <img src="images/logo.png" alt="#">
+                        </a>
+                    </li>
+                    <li>
+                        <a class="menu__item" href="#">Men</a>
+                    </li>
+                    <li>
+                        <a class="menu__item" href="#">Women</a>
+                    </li>
+                    <li>
+                        <a class="menu__item" href="#">Objects</a>
+                    </li>
+                    <li>
+                        <a class="menu__item" href="#">Analog</a>
+                    </li>
+                    <hr>
+                    <li>
+                        <a href="#" class="menu__item">Journal</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu__item">Search</a>
+                    </li>
+                    <hr>
+                    <li>
+                        <a href="#" class="menu__item">Login</a>
+                    </li>
+                    <li style="display: none">
+                        <a href="#" class="menu__item">
+                            <div>
+                                <img src="images/cart.png" alt="#">
+                            </div>
+                        </a>
+                    </li>
+                    <input type="search" class="input-search_burger">
+                </ul>
+            </div>
             <div class="section-main-menu-nav">
                 <div class="section-main-menu-logo">
                     <img src="images/logo.png" alt="#" width="188" height="38">
@@ -41,47 +86,61 @@
                     </ul>
                 </div>
                 <div class="section-main-menu-navbar-search-block">
-                    <ul>
-                        <li class="section-main-menu-navbar-search-block-after">
-                            <a href="#">Journal</a>
-                        </li>
-                        <li>
-                            <a href="#">Search</a>
-                        </li>
-                        <li class="section-main-menu-navbar-search-block-after">
-                            <a href="#">Login</a>
-                        </li>
-                        <div class="section-main-menu-navbar-search-block-after">
+                    <ul class="section__search_list">
+                        <li class="section__search_element">
                             <a href="#">
-                                <img src="images/cart.png" alt="#" width="18" height="18">
+                                Journal
                             </a>
-                        </div>
-                        <input type="search">
+                        </li>
+                        <li class="section__search_element">
+                            <a href="#">
+                                Search
+                            </a>
+                        </li>
+                        <li class="section__search_element">
+                            <a href="#">
+                                Login
+                            </a>
+                        </li>
+                        <li class="section__search_element">
+                            <a href="#">
+                                <img src="images/cart.png" alt="#">
+                            </a>
+                        </li>
                     </ul>
-                </div>
-            </div>
-
-        </div>
-    </div>
-    <div class="img-for-section">
-        <div class="inner-image">
-            <div class="section-main-inner-image">
-                <img class="object-fit object-fit-cover" src="images/main-banner.png" alt="">
-                <div class="section-main-txt">
-                    <h2>Analog: The Simplest Productivity System</h2>
-                    <h3>Shop now</h3>
+                    <input type="search" class="input-search">
                 </div>
             </div>
         </div>
-    </div>
+        <div class="img-for-section">
+            <div class="inner-image">
+                <div class="section-main-inner-image">
+                    <img class="object-fit object-fit-cover" src="images/main-banner.png" alt="">
+                    <div class="section-main-txt">
+                        <h2>Analog: The Simplest Productivity System</h2>
+                        <h3>Shop now</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
 </section>
 <section class="section-cart-shop">
     <ul class="section-cart-shop-list">
-        <li class="section-cart-shop-link">New Arrivals</li>
-        <li class="section-cart-shop-link">Analog</li>
-        <li class="section-cart-shop-link">Final Stock</li>
-        <li class="section-cart-shop-link">Best Sellers</li>
-        <li class="section-cart-shop-link">Clothing</li>
+        <li class="section-cart-shop-link">
+            <a href="#">New Arrivals</a>
+        </li>
+        <li class="section-cart-shop-link">
+            <a href="#">Analog</a>
+        </li>
+        <li class="section-cart-shop-link">
+            <a href="#">Final Stock</a>
+        </li>
+        <li class="section-cart-shop-link">
+            <a href="#">Best Sellers</a>
+        </li>
+        <li class="section-cart-shop-link">
+            <a href="#">Clothing</a>
+        </li>
     </ul>
     <div class="section-cart-shop-cards">
         <div class="section-cart-shop-cart-block-cart">
@@ -223,7 +282,9 @@
             <h1>Shop Womens</h1>
         </div>
         <div class="section-shop-img-obj">
-            <img src="images/shop-objects.png" alt="#">
+            <div class="section-shop-img">
+                <img src="images/shop-objects.png" alt="#">
+            </div>
             <h1>Shop Objects</h1>
         </div>
     </div>
@@ -253,20 +314,64 @@
     <footer class="footer">
         <div class="section-footer-left">
             <div class="section-footer-first">
-                <p>Customer Service</p>
-                <p>Help / FAQ</p>
-                <p>Returns & Exchanges</p>
-                <p>Sizing</p>
-                <p>Gift Cards</p>
-                <p>Contact Us</p>
+                <p>
+                    <a href="#">
+                        Customer Service
+                    </a>
+                </p>
+                <p>
+                    <a href="#">
+                        Help / FAQ
+                    </a>
+                </p>
+                <p>
+                    <a href="#">
+                        Returns & Exchanges
+                    </a>
+                </p>
+                <p>
+                    <a href="#">
+                        Sizing
+                    </a>
+                </p>
+                <p>
+                    <a href="#">
+                        Gift Cards
+                    </a>
+                </p>
+                <p>
+                    <a href="#">
+                        Contact Us
+                    </a>
+                </p>
             </div>
             <div class="section-footer-two">
-                <p>About</p>
-                <p>Our Story</p>
-                <p>Shop</p>
-                <p>Journal</p>
-                <p>About Our Tees</p>
-                <p>Reviews</p>
+                <p>
+                    <a href="#">
+                        About
+                    </a>
+                </p>
+                <p>
+                    <a href="#">
+                        Our Story
+                    </a>
+                </p>
+                <p><a href="#">
+                    Shop
+                </a></p>
+                <p>
+                    <a href="#">
+                        Journal
+                    </a>
+                </p>
+                <p>
+                    <a href="#">
+                        About Our Tees
+                    </a>
+                </p>
+                <p><a href="#">
+                    Reviews
+                </a></p>
             </div>
         </div>
         <div class="section-footer-right">
